deployment/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-app-deploy
  labels:
    app: kubernetes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-app
  template:
    metadata:
      labels:
        app: kubernetes-app
    spec:
      containers:
        - name: kubernetes-app-pod
          image: sagarunhale2294/kubernetes-demo:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: kubernetes-app-service
  labels:
    app: kubernetes-app
spec:
  selector:
    ad-app: kubernetes-app
  ports:
    - name: http-port
      port: 80
      targetPort: 8080
