deployment/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subdomain-ingress
  labels:
    name: subdomain-ingress
spec:
  rules:
  - host: user.svc.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: user-svc-name
            port: 
              number: 8080
  - host: dept.svc.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dept-svc-name
            port: 
              number: 8080
